--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,2 +1,6 @@
 .red{color: red;}
 input{color: blue;background-color: yellow;}
+.myline3{color: red;font-size: 22px;}
+
+.myline4{color: red;font-size: 22px;text-decoration: underline;}
+.myline4a{font-weight: bold;}
