--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,3 +1,7 @@
 <p>
   parent works!
 </p>
+<app-person #refperson></app-person>
+Name : {{refperson.name}}
+Age : {{refperson.age}}
+Address : {{refperson.street}},{{refperson.landmark}}.{{refperson.pincode}}ng serve
