--- a/src/app/parent/parent.component.html
+++ b/src/app/parent/parent.component.html
@@ -1,5 +1,4 @@
-<p>
-  parent works!
-</p>
 
-<app-child></app-child>
+<app-child (parentcount)='parentmethod($event)' ></app-child>
+<br>
+<h1>{{printcount}}</h1>
