--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,7 @@
+<div class="main-page">
+<div class="head"><app-header></app-header></div>
 
-<app-parent></app-parent>
+<div class="main"><router-outlet></router-outlet></div>
+
+<div class="foot"><app-footer></app-footer></div>
+</div>
