ng content example

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<h1>i am in component</h1>
-{{title}}
 
+<app-container><h1>this is comming from app-container of app.component.html</h1></app-container>
