--- a/src/app/c1/c1.component.html
+++ b/src/app/c1/c1.component.html
@@ -1,3 +1,6 @@
-<p>
-  c1 works!
-</p>
+<div>
+  <h1>Contacts </h1>
+  <!-- <p>{{x | capitalize}}</p> -->
+  <p>Please enter your contact no.</p>
+  <input type="text" [(ngModel)]='contactNumber'>
+</div>
