--- a/src/app/default/default.component.html
+++ b/src/app/default/default.component.html
@@ -1,5 +1,4 @@
-<p>
-  page not found
-</p>
-<a href="/c1">c1</a><a href="/c2">c2</a> <a href="/c3">c3</a>
+
+<a href="/c1">contact</a><a href="/c2">c2</a> <a href="/c3">c3</a><br>
+<button (click)='subscribe()'>Subscribe</button>
 
