children routing assignment

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,6 @@
-<p>
-  home works!
-</p>
+<div class="contact-menu"><ul>
+  <li><a routerLink="/home/home-header">Home header</a></li>
+  <li><a routerLink="/home/home-footer">Home footer</a></li>
+</ul></div>
+<div class="contact-content"></div>
+<div style="clear:both;"></div>
