--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,3 +1,6 @@
-<p>
-  contact works!
-</p>
+<div class="contact-menu"><ul>
+  <li><a routerLink="/home">Home</a></li>
+  <li><a routerLink="/about">About</a></li>
+</ul></div>
+<div class="contact-content"></div>
+<div style="clear:both;"></div>
