--- a/src/app/main-footer/main-footer.component.html
+++ b/src/app/main-footer/main-footer.component.html
@@ -1,3 +1,3 @@
 <div class="foot1">
-  <div style="text-align: center;"> <a href="/home">Back to home </a></div>
+  <div style="text-align: center;"> <a routerLink="/home">Back to home </a></div>
 </div>
